**************************************


Version 1.4.4 - CVS
-------------------
  - Fix listcommands plugin to include src/ in compose links.
  - Fix listcommands plugin to behave like normal reply/compose
    links, and return to message page that originally called from.
  - Max upload file size now correctly handles a '-1' value, meaning
    unlimited (#1094569). 
  
Version 1.4.4 RC1 - 31 December 2004
------------------------------------
  - Get alternating row colors of addressbook in sync with mailbox list.
  - Fix bug in detecting the delimiter in a folder moved to trash.
  - Trailing spaces are no longer trimmed from folder names (#818974).
  - Give proper error when PEAR DB not found.
  - Remove inappropriate strip_tags() from add-to-addressbook (#968475).
  - Translations are no longer included by default but instead are
    packaged separately. See locales/README.locales for details.
  - Backport Charset Decoding functions from DEVEL branch. This vastly
    increases the number of supported character sets and the performance
    of decoding.
  - Add src/configtest.php script which checks for common errors in the
    config.
  - Fixed forward in new window from search page courtesy of Jason Munro.
  - Prefs caching didn't work properly with register_globals off (#995102).
  - Various fixes for minor user interface glitches.
  - Fixed broken POP before SMTP (password wasn't being used).
  - Custom option page values now repopulate correctly.
  - Added "no focus" option for compose page in display preferences (setting
    reply focus to "No focus" also affects composing new messages).
  - Fix bug when Saving to Draft folder that contains special characters.
  - Fix RFC822 incompliant use of IP-address in Message-ID.
  - Uneditable address book entries no longer have checkboxes on addresses page.
  - Fix that viewing the last page of a mailbox with one message always
    claimed that the total of messages in that mailbox was 1.